--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <nav>
+        <div id="menu-con">
         <img src="flipkart.png" alt="" id="flipkart">
         <input type="text.png" id="navInput" placeholder="Search For Products, Brands And More">
-        <img src="login.png" alt="" id="login">
-        <img src="kart.png" alt="" id="kart">
-        <img src="becomeSeller.png" alt="" id="becomeSeller">
-        <img src="menu.png" alt="" id="menu">
+        <div id="menu-con-slide">
+          <img src="login.png" alt="" id="login">
+          <img src="kart.png" alt="" id="kart">
+          <img src="becomeSeller.png" alt="" id="becomeSeller">
+          <img src="menu.png" alt="" id="menu">
+        </div>
+        </div>
     </nav>
     <div id="scrollBar">
         <div class="dropdown">
