--- a/index.html
+++ b/index.html
@@ -6,6 +6,270 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flipkart</title>
 </head>
+    <style>
+        body{
+    background-color:rgb(245, 242, 242) ;
+    margin: auto;
+    font-family: sans-serif;
+}
+nav{
+    position: relative;
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+nav #flipkart{
+    position: relative;
+    width: 120px;
+    height: 45px;
+}
+nav #navInput{
+    position: relative;
+    width: 40%;
+    height: 40px;
+    border-radius: 8px;
+    border: hidden;
+    background-color: rgb(238, 238, 238);
+    font-size: 18px;
+    padding-left: 45px;
+    outline: none;
+}
+#menu-con{
+  position: relative;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 20px;
+  
+}
+#menu-con-slide{
+  position: relative;
+  display: flex;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 20px;
+  overflow: hidden;
+}
+nav #search{
+    position: relative;
+    width: 40px;
+    height: 30px;
+    right: 660px;   
+    z-index: 1;
+}
+nav #login{
+    position: relative;
+    width: 80px;
+    height: 30px;
+}
+nav #kart{
+    position: relative;
+    width: 40px;
+    height: 40px;
+}
+nav #menu{
+    position: relative;
+    width: 40px;
+    height: 40px;
+}
+#scrollBar{
+    position: relative;
+    width: 97%;
+    height: 120px;
+    background-color: white;
+    display: flex;
+    margin: 10px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto;
+}
+#scrollBar img{
+    position: relative;
+    width: 60px;
+    height: 60px;
+}
+#scrollBar #image{
+    position: relative;
+    width: 150px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+p{
+    position: relative;
+    text-align: center;
+    font-family: sans-serif;
+}
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+.slider_container {
+    position: relative;
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    overflow: hidden;
+  }
+  .slider {
+    position: relative;
+    width: 400%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    animation: 10s cubic-bezier(1, 1, 1, 1) sliding infinite;
+  }
+  .slide {
+    position: relative;
+    min-width: 100%;
+    height: 100%;
+  }
+  .slide img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .slide.one {
+    background: rgb(182, 19, 109);
+  }
+  .slide.two {
+    background: rgb(255, 64, 64);
+  }
+  .slide.three {
+    background: rgb(11, 173, 188);
+  }
+  .slide.four {
+    background: rgb(11, 188, 14);
+  }
+  .slide.five {
+    background: rgb(173, 11, 188);
+  }
+  @keyframes sliding {
+    0% {
+      transform: translateX(0%);
+    }
+    20% {
+      transform: translateX(0%);
+    }
+    25% {
+      transform: translateX(-100%);
+    }
+    45% {
+      transform: translateX(-100%);
+    }
+    50% {
+      transform: translateX(-200%);
+    }
+    70% {
+      transform: translateX(-200%);
+    }
+    75% {
+      transform: translateX(-300%);
+    }
+    95% {
+      transform: translateX(-300%);
+    }
+    100% {
+      transform: translateX(-400%);
+    }
+  }
+#banner{
+    position: relative;
+    width: 98.5%;
+    height: auto;
+    left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto;
+    scrollbar-width: none;
+}
+#banner img{
+    position: relative;
+    width: 100%;
+}
+#electronics{
+    position: relative;
+    margin: 10px;
+    background-color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+#electronics #text{
+    position: relative;
+    text-align: left;
+    left: 10px;
+    font-family: sans-serif;
+    padding-top: 25px;
+    font-size: 20px;
+    font-weight: bold;
+}
+#scroll{
+    position: relative;
+    width: 98.5%;
+    height: auto;
+    margin: 10px;
+    display: flex;
+    grid: 10px;
+    overflow-y: auto;
+    gap: 40px;
+    scrollbar-width: none;
+}
+ #scroll img{
+    position: relative;
+    width:400px;
+    height: 150px;
+    border: 1px solid lightgrey;
+    padding: 10px;
+    border-radius: 3px;
+    
+}
+    </style>
 <body>
     <nav>
         <div id="menu-con">
