--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="stylesheet.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flipkart</title>
-</head>
-    <style>
-        body{
+body{
     background-color:rgb(245, 242, 242) ;
     margin: auto;
     font-family: sans-serif;
@@ -32,9 +23,12 @@ nav #navInput{
     height: 40px;
     border-radius: 8px;
     border: hidden;
+    background-image: url('search.png');
+    background-repeat: no-repeat;
+    background-size: 52px;
     background-color: rgb(238, 238, 238);
     font-size: 18px;
-    padding-left: 45px;
+    padding-left: 55px;
     outline: none;
 }
 #menu-con{
@@ -269,70 +263,3 @@ p{
     border-radius: 3px;
     
 }
-    </style>
-<body>
-    <nav>
-        <div id="menu-con">
-        <img src="flipkart.png" alt="" id="flipkart">
-        <input type="text.png" id="navInput" placeholder="Search For Products, Brands And More">
-        <div id="menu-con-slide">
-          <img src="login.png" alt="" id="login">
-          <img src="kart.png" alt="" id="kart">
-          <img src="becomeSeller.png" alt="" id="becomeSeller">
-          <img src="menu.png" alt="" id="menu">
-        </div>
-        </div>
-    </nav>
-    <div id="scrollBar">
-        <div class="dropdown">
-            <div id="image"><img src="groceries.png" alt="" id="groceries" class="dropbtn"><p id="text">Groceries</p></div>
-        <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-        </div>
-        </div>
-        <div id="image"><img src="mobiles.png" alt="" id="mobiles"><p id="text">Mobiles</p></div>
-        <div id="image"><img src="fashions.png" alt="" id="fashion"><p id="text">Fashions</p></div>
-        <div id="image"><img src="electronics.png" alt="" id="electronic"><p id="text">Electronics</p></div>
-        <div id="image"><img src="home.png" alt="" id="home"><p id="text">Home & Furniture</p></div>
-        <div id="image"><img src="applience.png" alt="" id="applience"><p id="text">Applience</p></div>
-        <div id="image"><img src="travel.png" alt="" id="travel"><p id="text">Travel</p></div>
-        <div id="image"><img src="toys.png" alt="" id="toys"><p id="text">Beauty, Toys & More</p></div>
-        <div id="image"><img src="twoWheelers.png" alt="" id="twoWeelers"><p id="text">Two Wheelers</p></div>
-    </div>
-    <section class="slider_container">
-        <section class="slider">
-          <div class="slide one">
-            <img src="banner1.png" alt="" />
-          </div>
-          <div class="slide two">
-            <img src="banner2.png" alt="" />
-          </div>
-          <div class="slide three">
-            <img src="banner3.png" alt="" />
-          </div>
-          <div class="slide four">
-            <img src="banner4.png" alt="" />
-          </div>
-          <div class="slide four">
-            <img src="banner5.png" alt="" />
-          </div>
-        </section>
-      </section>
-    <div id="electronics">
-        <p id="text">Best Of Electronics</p>
-        <div id="scroll">
-            <img src="pro1.jpeg" alt="">
-            <img src="pro2.jpeg" alt="">
-            <img src="pro3.jpeg" alt="">
-            <img src="pro4.jpeg" alt="">
-            <img src="pro5.jpeg" alt="">
-            <img src="pro6.jpeg" alt="">
-            <img src="pro7.jpeg" alt="">
-            <img src="pro8.jpeg" alt="">
-        </div>
-    </div>
-    
-</body>
-</html>
