--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ nav #navInput{
     border: hidden;
     background-image: url('search.png');
     background-repeat: no-repeat;
-    background-size: 52px;
+    background-size: 45px 45px;
     background-color: rgb(238, 238, 238);
     font-size: 18px;
     padding-left: 55px;
