--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ nav #navInput{
   position: relative;
   display: flex;
   width: 30%;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   grid-gap: 20px;
   overflow: hidden;
