--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@ nav #navInput{
 #menu-con-slide{
   position: relative;
   display: flex;
-  width: 30%;
+  width: 100%;
   justify-content: flex-end;
   align-items: center;
   grid-gap: 20px;
+  padding-left: 10px;
   overflow: hidden;
 }
 nav #search{
