--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ nav #menu{
     justify-content: center;
     align-items: center;
     overflow-y: auto;
+    gap:20px;
 }
 #scrollBar img{
     position: relative;
