--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body{
     background-color:rgb(245, 242, 242) ;
-    margin:0;
+    margin:auto;
     font-family: sans-serif;
 }
 nav{
